# nn

./: .gitignore  Cargo.toml  DESIGN.md  DEVELOPMENT.md  README.md  rustc-ice-2025-10-17T13_08_05-54071.txt  rustc-ice-2025-10-17T13_12_22-54186.txt
benchmarks/: asv.conf.json
benchmarks/.asv/results/Sreyass-MacBook-Air.local/: machine.json
benchmarks/scripts/: conv.py
examples/: linear_regression.rs
nn/: Cargo.toml
nn-lib/: Cargo.toml
nn-lib/examples/: conv.rs  linear_regression.rs  multi_input.rs  multi_input_test.rs
nn-lib/src/: autodiff.rs  conv.rs  lib.rs  network.rs  tensor.rs
nn-macro/: Cargo.toml
nn-macro/src/: lib.rs
nn-macros/: Cargo.toml
nn-macros/src/: lib.rs
nn-utils/: Cargo.toml
nn-utils/src/: autodiff.rs  layerable.rs  lib.rs
nn/src/: lib.rs
sketches/: heterogenous_lists.excalidraw  mlp.excalidraw
src/: activation.rs  layer.rs  lib.rs  network.rs  tensor.rs
